--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3",
-        "yajra/laravel-datatables": "^1.5"
+        "laravel/ui": "^3.3"
+        
     },
     "require-dev": {
         "facade/ignition": "^2.5",
