--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "google/cloud-firestore": "^1.20",
+        "grpc/grpc": "1.38",
         "guzzlehttp/guzzle": "^7.0.1",
         "kreait/laravel-firebase": "^3.1",
         "laravel/framework": "^8.54",
