--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
         "realrashid/sweet-alert": "^4.0",
-        "uxweb/sweet-alert": "^2.0"
+        "uxweb/sweet-alert": "^2.0",
+        "ext-gd":" *"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
